package edu.fiuba.algo3.modelo;

import java.util.List;

public interface ModificadorGlobal {

    void aplicar(List<PuntajeParcial> puntajes);
}
