package edu.fiuba.algo3.modelo;

public interface ModificadorIndividual {
    public int modificar(int a);
}
